--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+ @import "bootstrap";
+ @import "splash";
+
+ header {
+  background-color: rgb(163, 163, 163);
+  min-height: 4rem;
+ }
+
+ .container {
+  box-shadow: 0px 1px 8px gray;
+ }
