--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,6 +1,5 @@
 <header class="row">
   <div class="col-12 p-3 d-flex flex-column align-items-center">
-    <h1 class="display-1">Hockey Predictions</h1>
-    <p class="display-6">Guess the outcome! Score points!</p>
+    <h1 class="display-1"></h1>
   </div>
 </header>
