--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,14 +14,39 @@
  *= require_self
  */
 
- @import "bootstrap";
- @import "splash";
+@import "bootstrap";
+@import "splash";
 
- header {
-  background-color: rgb(163, 163, 163);
-  min-height: 4rem;
- }
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
 
- .container {
-  box-shadow: 0px 1px 8px gray;
- }
+header {
+    height: 140px;
+    background-color: #c7c7c7;
+}
+
+nav {
+    height: 40px;
+    background-color: #8ba3ff;
+    margin-left: -.75rem !important;
+    margin-right: -.75rem !important;
+}
+
+#yield {
+  flex-grow: 1;
+}
+
+#links {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding-right: 3rem;
+  height: 100%;
+}
+
+#links div {
+  padding-right: 1rem;
+}
