--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,5 +1,31 @@
-<div class="row">
-  <div class="col-12">
-    splash page
+<div class="container h-100 d-flex flex-column">
+  <div class="row flex-grow-1">
+    <div class="col-12 d-flex p-5 shadow rounded" id="image">
+      <div id="title">
+        <h1 class="display-1">hockey predictions</h1>
+      </div>
+    </div>
+  </div>
+  <div class="row flex-grow-1">
+    <div class="col-12">
+      <div class="row h-100" id="lower-boxes">
+        <div class="col-lg-4 page-copy">
+
+          <div>
+         leaderboard
+          </div>
+        </div>
+        <div class="col-lg-4 page-copy">
+          <div>
+           login
+          </div>
+        </div>
+        <div class="col-lg-4 page-copy">
+          <div>
+          scores
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
