--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -4,15 +4,24 @@
 
 
 #image {
-  background-image: url("celly.jpg");
-  background-size: cover;
+  background-image: url("hockey.jpg");
+  background-size: 150%;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: left;
   margin-top: 3rem;
   display: flex;
   align-items: center;
+  color: white;
 }
 
+.layer {
+      background-color: #ff8b8b6f;
+    // position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 #title {
   max-width: 200px;
 }
