Adds controllers and views for users and sessions

--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container d-flex flex-column">
   <div class="row w-100 flex-grow-1" id="image">
     <div class="col-12 layer">
-    <h1 class="display-1">Hockey Predictions</h1>
+      <h1 class="display-1">Hockey Predictions</h1>
     </div>
   </div>
   <div class="row w-100 flex-grow-1">
     <div class="col-12">
-      row2, col 12
+      <%= button_to "Log in with Google", '/auth/google_oauth2'  %>
     </div>
   </div>
 </div>
