completes login-logout cycle and handles no games scheduled

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -13,7 +13,10 @@
       scores
     </div>
     <div>
-      login
+      <% if session[:id].nil? %>
+        login
+      <% else %>
+        <%= link_to 'logout', sessions_logout_path %>
+      <% end %>
     </div>
-  </div>
-</nav>
+  </nav>
