--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -4,7 +4,7 @@
       <%= link_to 'home', root_path %>
     </div>
     <div>
-      leaderboard
+      <%= link_to 'leaderboard', leaderboard_index_path %>
     </div>
     <div>
       <%= link_to 'predictions', predictions_path %>
