--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Leaderboard#index</h1>
-<p>Find me in app/views/leaderboard/index.html.erb</p>
+<div class="container border border-1 flex-column justify-content-start">
+  <div class="row w-100 justify-content-center">
+    <div class="col-12 d-flex justify-content-center mt-5">
+      <h1>Leaderboard</h1>
+    </div>
+  </div>
+  <div class="row w-100 justify-content-center">
+    <div class="col-6 d-flex justify-content-center">
+      <table class="table">
+        <tr>
+          <th>name</th>
+          <th>points</th>
+        </tr>
+        <% @users.each do |user| %>
+          <tr>
+            <td>
+              <%= user[:attributes][:first_name] %>
+            </td>
+            <td>
+              <%= user[:attributes][:total_points] %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
