--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,22 +1,46 @@
-<nav>
-  <div id="links">
-    <div>
-      <%= link_to 'home', root_path %>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary"
+        aria-label="Fourth navbar example">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Prediction Game</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarsExample04" aria-controls="navbarsExample04"
+            aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarsExample04">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <li class="nav-item">
+          <%= link_to 'Home', root_path, class: 'nav-link active' %>
+        </li>
+        <li class="nav-item">
+          <% if session[:id].nil? %>
+          <%= link_to 'Login', '/auth/google_oauth2', class: 'nav-link active', method: :post %>
+          <% else %>
+          <%= link_to 'Logout', sessions_logout_path, class: 'nav-link active' %>
+          <% end %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Games', predictions_path, class: 'nav-link active' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Leaderboard', leaderboard_index_path, class: 'nav-link active' %>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="dropdown04"
+                  data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+          <ul class="dropdown-menu" aria-labelledby="dropdown04">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <form>
+        <input class="form-control" type="text" placeholder="Search"
+                aria-label="Search">
+      </form>
     </div>
-    <div>
-      <%= link_to 'leaderboard', leaderboard_index_path %>
-    </div>
-    <div>
-      <%= link_to 'predictions', predictions_path %>
-    </div>
-    <div>
-      scores
-    </div>
-    <div>
-      <% if session[:id].nil? %>
-        login
-      <% else %>
-        <%= link_to 'logout', sessions_logout_path %>
-      <% end %>
-    </div>
-  </nav>
+  </div>
+</nav>
+
