--- a/app/views/predictions/index.html.erb
+++ b/app/views/predictions/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row flex-column align-items-center text-center">
     <h3 class="display-3">predict</h3>
-    <% if !@todays_games.nil? %>
+    <% if @todays_games != [] %>
       <% @todays_games.each do |game| %>
         <% if game.statusCode.to_i <= 2 %>
           <%= link_to prediction_path(game.gamePk) do %>
