--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,12 +1,26 @@
-<div class="container d-flex flex-column">
-  <div class="row w-100 flex-grow-1" id="image">
-    <div class="col-12 layer">
-      <h1 class="display-1">Hockey Predictions</h1>
+
+<div class="p-5 mb-4 bg-light rounded-3" id="jumbotron-background">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Prediction Game</h1>
+    <p class="col-md-8 fs-4">Test your predicting ability by selecting the outcomes of hockey games daily! Earn points for picking the correct team! Rise up the leaderboard and challenge your friends!</p>
+    <button class="btn btn-primary btn-lg" type="button">Example button</button>
+  </div>
+</div>
+
+<div class="row align-items-md-stretch">
+  <div class="col-md-6">
+    <div class="h-100 p-5 text-white bg-primary rounded-3">
+      <h2>See the Leaderboard</h2>
+      <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+      <%= link_to 'Leaderboard', leaderboard_index_path, class: 'btn btn-outline-light', type: 'button' %>
     </div>
   </div>
-  <div class="row w-100 flex-grow-1">
-    <div class="col-12">
-      <%= button_to "Log in with Google", '/auth/google_oauth2'  %>
+  <div class="col-md-6">
+    <div class="h-100 p-5 bg-light border rounded-3">
+      <h2>Add borders</h2>
+      <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+      <button class="btn btn-outline-secondary" type="button">Example button</button>
     </div>
   </div>
 </div>
+
