applies some styling

--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="p-5 mb-4 bg-light rounded-3" id="jumbotron-background">
+<div class="p-5 mb-4 rounded-3" id="jumbotron-background">
   <div class="container-fluid py-5">
     <h1 class="display-5 fw-bold">Prediction Game</h1>
     <p class="col-md-8 fs-4">Test your predicting ability by selecting the outcomes of hockey games daily! Earn points for picking the correct team! Rise up the leaderboard and challenge your friends!</p>
