--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -3,3 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+#jumbotron-background {
+  background-color: #b8b7bb;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
