--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -11,14 +11,14 @@
   <div class="col-md-6">
     <div class="h-100 p-5 text-white bg-primary rounded-3">
       <h2>See the Leaderboard</h2>
-      <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+      <p>Leaderboard lists all users, their current point total and their rank</p>
       <%= link_to 'Leaderboard', leaderboard_index_path, class: 'btn btn-outline-light', type: 'button' %>
     </div>
   </div>
   <div class="col-md-6">
     <div class="h-100 p-5 bg-light border rounded-3">
-      <h2>Add borders</h2>
-      <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+      <h2>Placeholder</h2>
+      <p>Another section that isn't being used at this time</p>
       <button class="btn btn-outline-secondary" type="button">Example button</button>
     </div>
   </div>
