--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -23,7 +23,7 @@
           <%= link_to 'Games', predictions_path, class: 'nav-link active' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Leaderboard', leaderboard_index_path, class: 'nav-link active' %>
+          <%= link_to 'Leaderboard', leaderboard_index_path, class: 'nav-link active', id: 'leaderboard'   %>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown04"
